--- a/main.tex
+++ b/main.tex
@@ -197,13 +197,14 @@ Os seres humanos não são capazes de ouvir qualquer frequência sonora, na verd
 Qualquer som que tenha frequência abaixo dos 20 Hz é inaudível pelos seres humanos e é chamado de infrassom, já os sons que tenham frequência maior que 20.000 Hz, também inaudíveis para nós, são conhecidos como ultrassons. Quer saber mais sobre o assunto? Acesse o nosso texto sobre infrassons e ultrassons.
 
 Confira a tabela mostrada a seguir, que relaciona a intensidade sonora com os possíveis efeitos negativos à saúde humana. Os dados exibidos estão de acordo com as diretrizes da Organização Mundial da Saúde (OMS):
-
+\newpage
 \input{./tabela}
+
 
 \section{Considerações Finais}
 
 O bel é utilizado para exprimir o valor de grandeza logarítmicas como o nível de campo, de potência, de intensidade sonora, de pressão acústica ou de atenuação. Os logaritmos de base dez são utilizados para se obterem os valores numéricos das grandezas expressas em bel. Como as medidas de intensidadesonora caracterizam números muito pequenos, usamos uma medida que as relaciona com o menor som que pode ser ouvido pelos seres humanos. Essa medida é conhecida como bel. Essa medida logarítmica foi nomeada em homenagem ao inventor estadunidense Alexander Graham Bell.
-Cada intensidade sonora é associada a um “nível de intensidade sonora”. Intensidade e nível de intensidade não devem ser confundidos. A unidade de nível de intensidade sonora é o “decibel”. Como o leitor já desconfia, o símbolo do decibel é “dB”. Por definição do Bell Labs, 1 Bel é igual a atenuação em um sinal de áudio em uma milha (1,61 km) de cabo telefônico. A figura 1 exemplifica esta unidade.
+Cada intensidade sonora é associada a um “nível de intensidade sonora”. Intensidade e nível de intensidade não devem ser confundidos. A unidade de nível de intensidade sonora é o “decibel”. Como o leitor já desconfia, o símbolo do decibel é “dB”. Por definição do Bell Labs, 1 Bel é igual a atenuação em um sinal de áudio em uma milha (1,61 km) de cabo telefônico.
 
 A intensidade das ondas sonoras é proporcional à amplitude da onda sonora, e não à sua frequência, por isso dizemos que sons de grande intensidade são sons fortes, enquanto sons de baixa intensidade são chamados de sons fracos. Sons de grande intensidade são capazes de transferir grandes quantidades de energia a cada segundo, podendo causar danos à audição, por exemplo.
 
