Adicionando Link no artigo

--- a/main.tex
+++ b/main.tex
@@ -52,7 +52,7 @@
 \selectlanguage{brazil}
 \titulo{Bel, Decibel e sua importância para o estudo do som}
 \tituloestrangeiro{Bel, Decibel and its importance for the study of sound}
-\autor{Pedro Oliveira Sousa}
+\autor{Pedro Oliveira Sousa \\\href{https://github.com/PedroSousax3/Artigo_Bel_Decibel}{GitHub do Artigo}}
 \maketitle
 
 \begin{resumoumacoluna}
